--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ subtitle: ''
 description: ''
 keywords: veegn,java
 author: veegn
-language: zh-Hans
-timezone: ''
+language: zh-CN
+timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
@@ -102,4 +102,10 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: 'git'
+  repo: https://github.com/veegn/veegn
+  branch: pages
+  message: 'hexo new page'
+  name: veegn
+  email: veegn.me@gmail.com
+  token: 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
