--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ script:
 deploy:
   provider: pages
   skip-cleanup: true
-  github-token: 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
+  github-token: $GH_TOKEN
   keep-history: true
   on:
-    branch: master
+    branch: pages
   local-dir: public
